samples/_failures_safe/1761513936_0e7481_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4573d26e.c: In function ‘tokenize’:
./samples/SAFE/__tmp_4573d26e.c:165:5: error: expected expression at end of input
  165 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_4573d26e.c:165:5: error: expected declaration or statement at end of input
